# OpenGL

./: README.md
Learning_OpenGL/: CMakeLists.txt  README.md
Learning_OpenGL/src/: config.cpp  config.h  glad.c  main.cpp
Learning_OpenGL/src/components/: physics_component.h  render_component.h
Learning_OpenGL/src/controller/: app.cpp
Learning_OpenGL/src/factories/: factory.cpp  factory.h
Learning_OpenGL/src/shaders/: fragment.txt  vertex.txt
Learning_OpenGL/src/systems/: camera_system.cpp  motion_system.cpp  motion_system.h  render_system.cpp  render_system.h
Learning_OpenGL/src/view/: shader.h
firstopengl/: CMakeLists.txt  README.md
firstopengl/dependencies/glad/: glad.h
firstopengl/src/: config.cpp  config.h  linear_algebra.cpp  linear_algebra.h  main.cpp  material.cpp  material.h  triangle_mesh.cpp
firstopengl/src/components/: camera_component.h  transform_component.h
firstopengl/src/controller/: app.cpp  app.h
firstopengl/src/shaders/: fragment.txt  vertex.txt
firstopengl/src/systems/: camera_system.h  render_system.cpp
firstopengl/src/view/: shader.cpp
